<resources>
    <string name="app_name">loggermanager</string>

    <string name="main_select_logger_label">Logger</string>
    <string name="main_no_logger_selected">&lt;No logger selected&gt;</string>

    <string name="main_radio_settings">Settings</string>
    <string name="main_radio_logs">Logs</string>
    <string name="main_radio_auto_time">Auto time</string>
    <string name="main_radio_console">Console</string>

    <string name="main_logger_id_label">LoggerID</string>
    <string name="main_scanpoint_label">Point#</string>
    <string name="main_pattern_label">Pattern</string>
    <string name="main_check_length_label">LenCheck</string>
    <string name="main_only_digits_label">OnlyDigits</string>
    <string name="main_time_label">Time</string>
    <string name="main_update_setting">&gt;</string>
    <string name="main_reload_settings">Reload</string>
    <string name="main_bluetooth_mode_old">Old</string>
    <string name="main_bluetooth_mode_new">New</string>

    <string name="main_select_save_dir">Save dir</string>
    <string name="main_no_save_dir">Save dir not defined</string>
    <string name="main_get_log">GETL</string>
    <string name="main_get_debug">GETD</string>
    <string name="main_get_log_line">GETL line</string>
    <string name="main_get_debug_line">GETD line</string>
    <string name="main_clear_device">Clear device</string>

    <string name="main_auto_update_time">Auto update time</string>
    <string name="main_update_period">Update period (min)</string>

    <string name="main_two_digits_error">Two digits number wrong: ${value}</string>
    <string name="main_pattern_error">Wrong pattern: ${value}</string>
    <string name="main_save_dir_error">Wrong directory: ${value}</string>

    <string name="file_dialog_location">Location</string>
    <string name="file_dialog_cant_read_folder">folder can\'t be read!</string>
    <string name="file_dialog_new">New</string>
    <string name="file_dialog_select">Select</string>
    <string name="file_dialog_file_name">File name:</string>
    <string name="file_dialog_cancel">Cancel</string>
    <string name="file_dialog_create">Save</string>
    <string name="file_dialog_no_data">No Data</string>
    <string name="file_dialog_err">Error</string>
</resources>
